--- a/LevelBuilder/index.html
+++ b/LevelBuilder/index.html
@@ -14,7 +14,12 @@
             <label>Width: <input type="number" id="widthInput" value="30" min="5" max="100"></label>
             <label>Height: <input type="number" id="heightInput" value="15" min="5" max="50"></label>
             <button id="resizeBtn">Reset Grid</button>
-            <button id="exportBtn">Export to Python</button>
+            <div class="separator" style="width: 1px; height: 20px; background: #666; margin: 0 5px;"></div>
+            <button id="toolBrush" class="tool-btn active">Brush</button>
+            <button id="toolBucket" class="tool-btn">Fill</button>
+            <div class="separator" style="width: 1px; height: 20px; background: #666; margin: 0 5px;"></div>
+            <button id="importBtn">Import</button>
+            <button id="exportBtn">Export</button>
             <button id="clearBtn">Clear All</button>
         </div>
 
