--- a/LevelBuilder/index.html
+++ b/LevelBuilder/index.html
@@ -27,7 +27,11 @@
             <div class="palette-item active" data-type="X" title="Dirt (Wall)">X</div>
             <div class="palette-item" data-type="S" title="Sticky/Moss">S</div>
             <div class="palette-item" data-type="G" title="Grapple Point">G</div>
-            <div class="palette-item" data-type="Y" title="Spikes">Y</div>
+            <div class="palette-item" data-type="Y" title="Floor Spikes">Y</div>
+            <div class="palette-item" data-type="F" title="Full Spikes">F</div>
+            <div class="palette-item" data-type="C" title="Ceiling Spikes">C</div>
+            <div class="palette-item" data-type="L" title="Left Wall Spikes">L</div>
+            <div class="palette-item" data-type="R" title="Right Wall Spikes">R</div>
             <div class="palette-item" data-type="N" title="Next Level">N</div>
             <div class="palette-item" data-type="D" title="Death Zone">D</div>
             <div class="palette-item" data-type="P" title="Player Start">P</div>
