--- a/LevelBuilder/index.html
+++ b/LevelBuilder/index.html
@@ -35,6 +35,7 @@
             <div class="palette-item" data-type="N" title="Next Level">N</div>
             <div class="palette-item" data-type="D" title="Death Zone">D</div>
             <div class="palette-item" data-type="P" title="Player Start">P</div>
+            <div class="palette-item" data-type="E" title="Enemy Spawn">E</div>
             <div class="palette-item" data-type=" " title="Empty (Eraser)">Eraser</div>
         </div>
 
