--- a/LevelBuilder/index.html
+++ b/LevelBuilder/index.html
@@ -51,6 +51,8 @@
             <div class="palette-item" data-type="D" title="Death Zone">D</div>
             <div class="palette-item" data-type="P" title="Player Start">P</div>
             <div class="palette-item" data-type="E" title="Enemy Spawn">E</div>
+            <div class="palette-item" data-type="T" title="Teleporter T">T</div>
+            <div class="palette-item" data-type="t" title="Teleporter t">t</div>
             <div class="palette-item" data-type=" " title="Empty (Eraser)">Eraser</div>
         </div>
 
